Fix header transition margin bottoms to align

--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,11 @@ html, body, header, body, main, .overlay {
 
 header {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-evenly;
   /* background-color: #191970; */
   background-color: #c1e9ee;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   height: max-content;
   padding: 1em;
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
@@ -85,7 +85,7 @@ nav {
   /* margin-left: 5em; */
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-around;
   width: 50%;
 }
@@ -108,10 +108,11 @@ nav {
 button {
   height: 75px;
   width: 25%;
-  border: 4px solid #e0505f;
+  /* border: 4px solid #e0505f; */
+	border: 0;
   border-radius: 5%;
   font-size: 25px;
-  background-color: white;
+  background-color: #c1e9ee;
 }
 
 
@@ -139,9 +140,13 @@ h4 {
   /* border-radius: 5%; */
 }
 
+.titles {
+	margin-bottom: 1.25em;
+}
+
 .calendar {
   /* height: 15%; */
-  width: 12%;
+  width: 10%;
 }
 
 .sub-title {
@@ -294,8 +299,12 @@ h4 {
   .hamburger {
     display: flex;
   }
+
+	.titles {
+		margin-bottom: 0;
+	}
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
+} */
